syntax = "proto3"; //Specify proto3 version.
package work_leave;
//Service. define the methods that the grpc server can expose to the client.
service EmployeeLeaveDaysService {
    rpc EligibleForLeave (Employee) returns (LeaveEligibility) {}
    rpc grantLeave (Employee) returns (LeaveFeedback){}
    rpc Insert (Employee) returns (Employee) {}
    rpc List (Empty) returns (EmployeeList) {}
}
// Message Type definition for an Employee.
message Employee {
    int32 employee_id = 1;
    string name = 2;
    float accrued_leave_days = 3;
    float requested_leave_days = 4;
}
// Message Type definition for LeaveEligibility response.
message LeaveEligibility {
    bool eligible = 1;
}
// Message Type definition for LeaveFeedback response.
message LeaveFeedback {
    bool granted = 1;
    float accrued_leave_days = 2;
    float granted_leave_days = 3;
}
// Message Type definition for an empty object. 
message Empty {}
// Message Type definition for EmployeeList response.
message EmployeeList {
    repeated Employee employees = 1;
}